installed web app functionality 20250520170226

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Trapt Playlists">
+    <meta name="apple-mobile-web-app-title" content="TRAPT Playlists">
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Trapt" />
+    <meta name="apple-mobile-web-app-title" content="TRAPT" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="theme-color" content="#18181b" />
   </head>
   <body>
+    <div class="safe-area-absolute-overlay"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
