--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         background-color: #18181b !important;
         background: #18181b !important;
         background-image: none !important;
+        opacity: 1 !important;
       }
       /* Cover the entire top safe area */
       body::before {
@@ -39,13 +40,14 @@
         height: constant(safe-area-inset-top, 60px);
         background-color: #18181b !important;
         background: #18181b !important;
+        opacity: 1 !important;
         z-index: 999999;
         pointer-events: none;
       }
     </style>
   </head>
   <body style="background-color: #18181b; margin: 0; padding: 0;">
-    <div class="safe-area-absolute-overlay" style="background-color: #18181b !important; background: #18181b !important;"></div>
+    <div class="safe-area-absolute-overlay" style="background-color: #18181b !important; background: #18181b !important; opacity: 1 !important;"></div>
     <div id="root" style="background-color: #18181b;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
